--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1,
     maximum-scale=1, user-scalable=0"
     />
-    <title>Welcome to Firebase Hosting</title>
+    <title>Stock Finder</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.16.0/firebase-app.js"></script>
